Fixed gaps between modal divs in Chrome

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -27,6 +27,7 @@
 .modal-header {
   padding: 20px;
   background: white;
+  margin-bottom: -1px;
 }
 
 .modal-title {
@@ -40,6 +41,7 @@
   max-height: 800px;
   text-align: center;
   overflow-y: auto;
+  margin-bottom: -1px;
 }
 
 .modal-close {
